# BenchFRET

./: .gitignore  LICENSE  MANIFEST.in  README.md  gui_HMM_utils.py  pyproject.toml  setup.py
Bench_pipe/: Untitled-1.ipynb
DeepLASI/: deepLASI_architectures.py  wrapper.py
data/simulated_traces/pickledict/: trace_dataset_2024_01_29.pkl
data/simulated_traces/text_files/: trace_dataset_2024_01_29_0.csv  trace_dataset_2024_01_29_1.csv  trace_dataset_2024_01_29_10.csv  trace_dataset_2024_01_29_11.csv  trace_dataset_2024_01_29_12.csv  trace_dataset_2024_01_29_13.csv  trace_dataset_2024_01_29_14.csv  trace_dataset_2024_01_29_15.csv  trace_dataset_2024_01_29_16.csv  trace_dataset_2024_01_29_17.csv  trace_dataset_2024_01_29_18.csv  trace_dataset_2024_01_29_19.csv  trace_dataset_2024_01_29_2.csv  trace_dataset_2024_01_29_20.csv  trace_dataset_2024_01_29_21.csv  trace_dataset_2024_01_29_22.csv  trace_dataset_2024_01_29_23.csv  trace_dataset_2024_01_29_24.csv  trace_dataset_2024_01_29_25.csv  trace_dataset_2024_01_29_26.csv  trace_dataset_2024_01_29_27.csv  trace_dataset_2024_01_29_28.csv  trace_dataset_2024_01_29_29.csv  trace_dataset_2024_01_29_3.csv  trace_dataset_2024_01_29_4.csv  (+37 more)
ebFRET/documentation/: ebfret_user_guide.tex
example/: batch_DeepLASI_ultimate.ipynb  batch_HMM.ipynb  batch_analysis.ipynb  batch_generator.ipynb  load_simulation.ipynb  new_simulation.ipynb  prepare_training_set_from_raw_data.ipynb  real_gapseq_example.ipynb
simulation/: deepgapseq_trace_generator.py  generator.py
src/BenchFRET.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
(+37 files in other folders)
